chapter-1/cluster-hardening/2-limiting-traffic/allow-limited-traffic.yaml
# To control traffic in your ns, use spec.podSelector field. It determines
# which Pod(s) the policy will apply
# The policy will not affect Pods that do not match the podSelector
# add label to created namespace
# k label namespace ewonda project=test

#igress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
  namespace: ewonda
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: test
          podSelector:
            matchLabels:
              app: client
      ports:
        - protocol: TCP
          port: 80

#egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress
  namespace: ewonda
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              project: test
          podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 80
